--- a/genogram.sty
+++ b/genogram.sty
@@ -1,3 +1,16 @@
+%============================================================%
+%      Copyright (C) 2019 by Alessandro Sciarra
+%
+% This file may be distributed and/or modified under the
+% conditions of the LaTeX Project Public License, either
+% version 1.3 of this license or (at your option) any later
+% version. The latest version of this license is in:
+%
+%       http://www.latex-project.org/lppl.txt
+%
+% and version 1.3 or later is part of all distributions of
+% LaTeX version 2005/12/01 or later.
+%============================================================%
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{genogram}[2019/03/22 v0.1 Package to simply draw simple genograms]
 
